src/objects/Defect__c.object
<CustomObject>
    <description>BME - A Defect represents a failure of the application to produce the expected results, as identified by a Test Case Step. Defects are associated to Test Case Steps and can be associated back to Requirements via the Defect Requirement Join object.</description>
    <fields>
        <fullName>Actual_Closed_Date__c</fullName>
        <description>Field used to capture the date when the defect was set to &apos;Closed&apos;</description>
        <inlineHelpText>Date the Defect was Closed</inlineHelpText>
        <label>Actual Closed Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Age__c</fullName>
        <formula>TODAY() -  DATEVALUE( CreatedDate )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Age</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Area__c</fullName>
        <label>Area</label>
        <picklist>
            <picklistValues>
                <fullName>Authentication</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CipherCloud</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Data</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Forms</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Logic</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Profiles/Access/Admin</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Reports (Std/Custom)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>UI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Validation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Assigned_to__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Assigned to</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Defects</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Closed_Date__c</fullName>
        <label>Expected Closed Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Complexity__c</fullName>
        <label>Complexity</label>
        <picklist>
            <picklistValues>
                <fullName>Low</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Medium</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>High</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Defect_Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>1. Submitted</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>2. In Progress</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2.b Need More Info</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3. Fixed in Config</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4a. Ready to Retest in SIT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4b. Ready to Retest in UAT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4c. Deferred</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5a. Closed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5b. Converted to Change Request</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5c. Rejected</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5d. Duplicate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5e. Closed - Accept Rejected</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6. Pending decision</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Detailed_Description__c</fullName>
        <label>Detailed Description</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Enhancement_Type__c</fullName>
        <label>Enhancement Type</label>
        <picklist>
            <picklistValues>
                <fullName>Change/new requirement</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Field label (i.e. different from DD).</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Help text</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>List Views</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Page layout</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Picklist values (i.e. different from DD)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Standard Salesforce functionality</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Usability</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Enhancement__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Enhancement</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Impacted_Object__c</fullName>
        <label>Impacted Objects</label>
        <picklist>
            <picklistValues>
                <fullName>Activities</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Campaigns</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Leads</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Accounts</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Contacts</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Opportunities</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Quotes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Contracts</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cases</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Solutions</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Open_Date__c</fullName>
        <label>Open Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Related_Requirement__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Related Requirement</label>
        <referenceTo>Requirement__c</referenceTo>
        <relationshipLabel>Defects</relationshipLabel>
        <relationshipName>Defects</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Requirement__c</fullName>
        <formula>Test_Case__r.Requirement__r.Name</formula>
        <label>Related Requirement</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Resolution__c</fullName>
        <description>Field to capture the resolution for the defect</description>
        <inlineHelpText>Summary of the final resolution to this defect</inlineHelpText>
        <label>Final Resolution</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Severity__c</fullName>
        <label>Severity</label>
        <picklist>
            <picklistValues>
                <fullName>High</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Medium</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Low</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Status_Update__c</fullName>
        <description>Holds pertinent status related information</description>
        <inlineHelpText>Enter any status updates in this field</inlineHelpText>
        <label>Status Update</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Summary__c</fullName>
        <label>Summary</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Test_Case_Name__c</fullName>
        <formula>Test_Case__r.Test_Case_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Test Case Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Test_Case_Step__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Test Case Step</label>
        <referenceTo>Test_Case_Step__c</referenceTo>
        <relationshipLabel>Defects</relationshipLabel>
        <relationshipName>Defects</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Test_Case__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Test Case</label>
        <referenceTo>Test_Case__c</referenceTo>
        <relationshipLabel>Defects</relationshipLabel>
        <relationshipName>Defects</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Testing_Cycle__c</fullName>
        <label>Testing Cycle</label>
        <picklist>
            <picklistValues>
                <fullName>Sprint 1 - SIT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sprint 1 - UAT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sprint 2 - SIT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sprint 2 - UAT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sprint 3 - SIT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sprint 3 - UAT</fullName>
                <default>true</default>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Defect</label>
    <listViews>
        <fullName>Address_Post_Go_Live</fullName>
        <columns>Testing_Cycle__c</columns>
        <columns>Severity__c</columns>
        <columns>NAME</columns>
        <columns>Summary__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>Enhancement__c</columns>
        <columns>Defect_Status__c</columns>
        <columns>Area__c</columns>
        <columns>OWNER.ALIAS</columns>
        <columns>Enhancement_Type__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>Test_Case_Name__c</columns>
        <columns>Test_Case__c</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Defect_Status__c</field>
            <operation>contains</operation>
            <value>1. Submitted,2. In Progress,2.b Need More Info,4c. Deferred,5b. Converted</value>
        </filters>
        <label>Address Post Go Live</label>
    </listViews>
    <listViews>
        <fullName>All_Defects</fullName>
        <columns>NAME</columns>
        <columns>Testing_Cycle__c</columns>
        <columns>Defect_Status__c</columns>
        <columns>Severity__c</columns>
        <columns>Summary__c</columns>
        <columns>Area__c</columns>
        <columns>Resolution__c</columns>
        <columns>Open_Date__c</columns>
        <columns>Enhancement__c</columns>
        <columns>Enhancement_Type__c</columns>
        <filterScope>Everything</filterScope>
        <label>All Defects</label>
    </listViews>
    <listViews>
        <fullName>All_Defects_Not_Addressed</fullName>
        <columns>Testing_Cycle__c</columns>
        <columns>NAME</columns>
        <columns>CREATED_DATE</columns>
        <columns>Enhancement__c</columns>
        <columns>Defect_Status__c</columns>
        <columns>Severity__c</columns>
        <columns>Summary__c</columns>
        <columns>Area__c</columns>
        <columns>OWNER.ALIAS</columns>
        <columns>Enhancement_Type__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>Test_Case_Name__c</columns>
        <columns>Test_Case__c</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Defect_Status__c</field>
            <operation>equals</operation>
            <value>1. Submitted,2. In Progress,2.b Need More Info,6. Pending decision</value>
        </filters>
        <label>All Defects Not Addressed</label>
    </listViews>
    <listViews>
        <fullName>All_Defects_Open_Not_Enhancements</fullName>
        <columns>NAME</columns>
        <columns>Summary__c</columns>
        <columns>Detailed_Description__c</columns>
        <columns>Age__c</columns>
        <columns>Severity__c</columns>
        <columns>Defect_Status__c</columns>
        <columns>Testing_Cycle__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Defect_Status__c</field>
            <operation>equals</operation>
            <value>1. Submitted,2. In Progress,2.b Need More Info,4c. Deferred</value>
        </filters>
        <filters>
            <field>Enhancement__c</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>All Defects Open (Not Enhancements)</label>
    </listViews>
    <listViews>
        <fullName>All_Defects_Sprint_3_SIT</fullName>
        <columns>Testing_Cycle__c</columns>
        <columns>NAME</columns>
        <columns>CREATED_DATE</columns>
        <columns>Severity__c</columns>
        <columns>Impacted_Object__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>Defect_Status__c</columns>
        <columns>Status_Update__c</columns>
        <columns>Summary__c</columns>
        <columns>Test_Case_Name__c</columns>
        <columns>Test_Case__c</columns>
        <columns>Area__c</columns>
        <columns>Complexity__c</columns>
        <columns>Assigned_to__c</columns>
        <columns>Detailed_Description__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Testing_Cycle__c</field>
            <operation>equals</operation>
            <value>Sprint 3 - SIT</value>
        </filters>
        <label>All Defects Sprint 3 SIT</label>
    </listViews>
    <listViews>
        <fullName>All_Defects_Sprint_3_UAT</fullName>
        <columns>Testing_Cycle__c</columns>
        <columns>NAME</columns>
        <columns>Enhancement__c</columns>
        <columns>Defect_Status__c</columns>
        <columns>Summary__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>Severity__c</columns>
        <columns>Impacted_Object__c</columns>
        <columns>Area__c</columns>
        <columns>Complexity__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>Status_Update__c</columns>
        <columns>Test_Case_Name__c</columns>
        <columns>Test_Case__c</columns>
        <columns>Assigned_to__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Testing_Cycle__c</field>
            <operation>equals</operation>
            <value>Sprint 3 - UAT</value>
        </filters>
        <label>All Defects Sprint 3 UAT</label>
    </listViews>
    <listViews>
        <fullName>All_Defects_fixed_in_config</fullName>
        <columns>NAME</columns>
        <columns>OWNER.ALIAS</columns>
        <columns>Defect_Status__c</columns>
        <columns>Severity__c</columns>
        <columns>Summary__c</columns>
        <columns>Resolution__c</columns>
        <columns>Open_Date__c</columns>
        <columns>Test_Case__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Defect_Status__c</field>
            <operation>equals</operation>
            <value>3. Fixed in Config</value>
        </filters>
        <label>All Defects (fixed in config)</label>
    </listViews>
    <listViews>
        <fullName>All_Defects_in_progress</fullName>
        <columns>Testing_Cycle__c</columns>
        <columns>NAME</columns>
        <columns>Severity__c</columns>
        <columns>Defect_Status__c</columns>
        <columns>Enhancement__c</columns>
        <columns>Summary__c</columns>
        <columns>Area__c</columns>
        <columns>Impacted_Object__c</columns>
        <columns>Age__c</columns>
        <columns>OWNER.ALIAS</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>Test_Case_Name__c</columns>
        <columns>Test_Case__c</columns>
        <columns>Complexity__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Enhancement__c</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>Defect_Status__c</field>
            <operation>equals</operation>
            <value>1. Submitted,2. In Progress,2.b Need More Info</value>
        </filters>
        <label>All Defects - in progress</label>
    </listViews>
    <listViews>
        <fullName>All_Defects_ready_to_restest_to_UAT</fullName>
        <columns>NAME</columns>
        <columns>OWNER.ALIAS</columns>
        <columns>Defect_Status__c</columns>
        <columns>Severity__c</columns>
        <columns>Summary__c</columns>
        <columns>Resolution__c</columns>
        <columns>Open_Date__c</columns>
        <columns>Test_Case__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Defect_Status__c</field>
            <operation>equals</operation>
            <value>4b. Ready to Retest in UAT</value>
        </filters>
        <label>All Defects (ready to restest to UAT)</label>
    </listViews>
    <listViews>
        <fullName>All_Open_Defects</fullName>
        <columns>NAME</columns>
        <columns>Summary__c</columns>
        <columns>Defect_Status__c</columns>
        <columns>Severity__c</columns>
        <columns>Resolution__c</columns>
        <columns>Open_Date__c</columns>
        <columns>Test_Case__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Defect_Status__c</field>
            <operation>equals</operation>
            <value>In Progress</value>
        </filters>
        <label>All Open Defects</label>
    </listViews>
    <listViews>
        <fullName>All_Open_Defects_Deloitte</fullName>
        <booleanFilter>1 AND (2 OR 3)</booleanFilter>
        <columns>Testing_Cycle__c</columns>
        <columns>NAME</columns>
        <columns>OWNER.ALIAS</columns>
        <columns>Defect_Status__c</columns>
        <columns>Severity__c</columns>
        <columns>Enhancement__c</columns>
        <columns>Summary__c</columns>
        <columns>Area__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>Impacted_Object__c</columns>
        <columns>Test_Case_Name__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>Test_Case__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Defect_Status__c</field>
            <operation>notContain</operation>
            <value>closed,retest,duplicate,rejec,fixed,defe</value>
        </filters>
        <filters>
            <field>OWNER.LAST_NAME</field>
            <operation>contains</operation>
            <value>horanieh,gilmour,pietr,verma,palat,zura</value>
        </filters>
        <filters>
            <field>OWNER.FIRST_NAME</field>
            <operation>equals</operation>
            <value>alex</value>
        </filters>
        <label>All Open Defects (Deloitte)</label>
    </listViews>
    <listViews>
        <fullName>All_Open_Defects_STADD</fullName>
        <columns>Testing_Cycle__c</columns>
        <columns>NAME</columns>
        <columns>OWNER.ALIAS</columns>
        <columns>Defect_Status__c</columns>
        <columns>Enhancement__c</columns>
        <columns>Severity__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>Summary__c</columns>
        <columns>Status_Update__c</columns>
        <columns>Impacted_Object__c</columns>
        <columns>Test_Case_Name__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>Test_Case__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Defect_Status__c</field>
            <operation>notContain</operation>
            <value>closed,retest,duplicate,rejec</value>
        </filters>
        <filters>
            <field>OWNER.LAST_NAME</field>
            <operation>notContain</operation>
            <value>horanieh,gilmour,pietr,verma,palat,zura,fran</value>
        </filters>
        <label>All Open Defects (STADD)</label>
    </listViews>
    <listViews>
        <fullName>All_Open_Enhancements</fullName>
        <columns>Testing_Cycle__c</columns>
        <columns>NAME</columns>
        <columns>Summary__c</columns>
        <columns>Severity__c</columns>
        <columns>Defect_Status__c</columns>
        <columns>Enhancement_Type__c</columns>
        <columns>Area__c</columns>
        <columns>OWNER.ALIAS</columns>
        <columns>Impacted_Object__c</columns>
        <columns>Age__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>Test_Case_Name__c</columns>
        <columns>Test_Case__c</columns>
        <columns>Complexity__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Enhancement__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>Defect_Status__c</field>
            <operation>equals</operation>
            <value>1. Submitted,2. In Progress,2.b Need More Info,6. Pending decision</value>
        </filters>
        <label>All Open Enhancements</label>
    </listViews>
    <listViews>
        <fullName>Business_Analyst_Config_Tasks</fullName>
        <columns>NAME</columns>
        <columns>Defect_Status__c</columns>
        <columns>Summary__c</columns>
        <columns>OWNER.ALIAS</columns>
        <columns>Age__c</columns>
        <columns>Open_Date__c</columns>
        <columns>Severity__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Defect_Status__c</field>
            <operation>equals</operation>
            <value>2. In Progress</value>
        </filters>
        <filters>
            <field>OWNER.ALIAS</field>
            <operation>equals</operation>
            <value>ALamo,smil,AHygg</value>
        </filters>
        <label>Business Analyst Config Tasks</label>
    </listViews>
    <listViews>
        <fullName>Enhancements</fullName>
        <columns>NAME</columns>
        <columns>Testing_Cycle__c</columns>
        <columns>Summary__c</columns>
        <columns>Defect_Status__c</columns>
        <columns>Severity__c</columns>
        <columns>OWNER.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Enhancement__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Enhancements</label>
    </listViews>
    <nameField>
        <displayFormat>D-{00000}</displayFormat>
        <label>Defect ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Defects</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Force_Final_Resolution_on_Closed_Defect</fullName>
        <active>true</active>
        <description>If Status = Closed, Final Resolution must not be Null</description>
        <errorConditionFormula>AND(  ISPICKVAL(Defect_Status__c, &apos;Closed&apos;), ISBLANK( Resolution__c ))</errorConditionFormula>
        <errorDisplayField>Resolution__c</errorDisplayField>
        <errorMessage>Please enter a Final Resolution before closing this Defect.</errorMessage>
    </validationRules>
</CustomObject>